--- a/CarDealership/View/BlankPage2.xaml
+++ b/CarDealership/View/BlankPage2.xaml
@@ -8,17 +8,13 @@
     x:Class="CarDealership.View.BlankPage2"
     mc:Ignorable="d">
 
-    <Page.DataContext>
-        <ViewModel:RegisterCarViewModel/>
-    </Page.DataContext>
-
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
         <Grid>
-            
 
-            <StackPanel>
+
+            <StackPanel  BorderThickness="3,3,3,3" BorderBrush="WhiteSmoke" Width="800" Height="510">
                 <controls:DataGrid ItemsSource="{Binding CarCollection}" x:Name="CarCollection" 
-                   SelectionMode="Multiple" DefaultOrderIndex="1" Width="800" Height="700">
+                   SelectionMode="Multiple" DefaultOrderIndex="1" Width="800" Height="500">
                     <controls:DataGrid.Columns>
                         <controls:DataGridTextColumn Width="200" Header="ID" 
                   Binding="{Binding ID}"/>
@@ -43,19 +39,30 @@
                                     <ColumnDefinition Width="*"/>
                                 </Grid.ColumnDefinitions>
                                 <StackPanel HorizontalAlignment="Left" Grid.Column="0">
-                                        <TextBlock Text="Details: " FontWeight="Bold" />
+                                        <TextBlock Text="Details: " FontWeight="Bold" FontSize="15"/>
+                                    <StackPanel Orientation="Horizontal">
+                                        <TextBlock Text="Color:" Width="50"/>
                                         <TextBlock Text="{Binding Color}" Width="100"/>
+                                    </StackPanel>
+                                    <StackPanel Orientation="Horizontal">
+                                        <TextBlock Text="Year:" Width="50"/>
                                         <TextBlock Text="{Binding Year}" Width="100" />
+                                    </StackPanel>
+                                    <StackPanel Orientation="Horizontal">
+                                        <TextBlock Text="Comment:" Width="80"/>
                                         <TextBlock Text="{Binding Comment}" Width="100"/>
+                                    </StackPanel>
                                 </StackPanel>
                                 <StackPanel HorizontalAlignment="Right" Grid.Column="1">
                                     <Button Content="Sell"
                                             HorizontalAlignment="Right"
-                                            VerticalAlignment="top"/>
+                                            VerticalAlignment="top"
+                                            Command="{Binding CreateInvoiceWithSelectedCar}"/>
                                     <Button Content="Delete"
                                             HorizontalAlignment="Right"
                                             Margin="0,10,0,0"
-                                            VerticalAlignment="Top"/>
+                                            VerticalAlignment="Top"
+                                            Command="{Binding DeleteCar}"/>
                                 </StackPanel>
                             </Grid>
                         </DataTemplate>
