--- a/CarDealership/View/RegisterCarPage.xaml
+++ b/CarDealership/View/RegisterCarPage.xaml
@@ -6,16 +6,19 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:interfaces="using:CarDealership.Interfaces"
     xmlns:ViewModel="using:CarDealership.ViewModel"
+    xmlns:controls="using:MyToolkit.Controls"
+    xmlns:interop="using:Windows.UI.Xaml.Interop"
     x:Class="CarDealership.View.RegisterCarPage"
     mc:Ignorable="d">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
         <StackPanel Orientation = "Horizontal" VerticalAlignment="Bottom" Margin="50,0,0,0" Height="40" Width="300" HorizontalAlignment="Left">
-            
+
             <!--<AppBarButton Icon = "Like" > <TextBox Text="sadsa"></TextBox></AppBarButton>
             <AppBarButton Icon = "Dislike" />
             <AppBarSeparator/>
-            <AppBarButton Icon = "Accept" />--><!--
+            <AppBarButton Icon = "Accept" />-->
+            <!--
             <AppBarButton Icon = "Add" />
             <AppBarSeparator/>
             <AppBarButton Icon ="Accept"/>-->
@@ -74,54 +77,75 @@
                 <Grid.DataContext>
                     <ViewModel:RegisterCarViewModel/>
                 </Grid.DataContext>
-                <ListView x:Name="CarList"
-			Height="600"
-			ItemsSource="{Binding CarCollection}" Margin="395,126,356,-6" SelectedItem="{Binding SelectedCar,Mode=TwoWay}" Header="Cars In Stock" CanDragItems="True" CanReorderItems="True" AllowDrop="True" IsItemClickEnabled="True" IsTabStop="True" >
-                    <ListView.ItemTemplate>
-                        <DataTemplate>
-                            <StackPanel Width="400"
-						Background="#32BEA6"
-						Margin="5">
-                                <StackPanel Orientation="Horizontal" HorizontalAlignment="Left" Background="#32BEA6" BorderThickness="0" Margin="5,5,5,4">
-                                    <Image x:Name="image" Height="130" Margin="0,0,0,0" VerticalAlignment="Top" Width="130" Source="{Binding ImagePath,Mode=TwoWay}" NineGrid="0" />
-                                    <StackPanel Orientation="Vertical" BorderBrush="Black" BorderThickness="0" Margin="10,0,0,0">
-                                        <StackPanel Orientation="Horizontal">
-                                            <TextBlock Text="ID:" Width="50"/>
-                                            <TextBox Text="{Binding ID}" Width="100"/>
-                                        </StackPanel>
-                                        <StackPanel Orientation="Horizontal">
-                                            <TextBlock Text="Name:" Width="50"/>
-                                            <TextBox Text="{Binding Name}" Width="150"/>
-                                        </StackPanel>
-                                        <StackPanel Orientation="Horizontal">
-                                            <TextBlock Text="Brand:" Width="50"/>
-                                            <TextBox Text="{Binding Brand}" Width="150"/>
-                                        </StackPanel>
+                <!--DataGrid-->
+                <StackPanel  BorderThickness="3,3,3,3" BorderBrush="WhiteSmoke" Width="800" Height="510">
+                    <controls:DataGrid ItemsSource="{Binding CarCollection}" x:Name="DataGrid" 
+                   SelectionMode="Multiple" SelectedItem="{Binding SelectedCar, Mode=TwoWay}" DefaultOrderIndex="1" Width="800" Height="500">
+                        <controls:DataGrid.Columns>
+                            <controls:DataGridTextColumn Width="200" Header="ID" 
+                  Binding="{Binding ID}"/>
+                            <controls:DataGridTextColumn Width="200" Binding="{Binding Brand}" 
+                  IsAscendingDefault="False">
+                                <controls:DataGridTextColumn.Header>
+                                    <TextBlock Text="Brand" Foreground="Green" />
+                                </controls:DataGridTextColumn.Header>
+                            </controls:DataGridTextColumn>
+                            <controls:DataGridTextColumn Width="200" Header="Name" 
+                  Binding="{Binding Name}" />
+                            <controls:DataGridTextColumn Width="200" Header="Color" 
+                  Binding="{Binding Brand}" />
+                        </controls:DataGrid.Columns>
+
+                        <controls:DataGrid.ItemDetailsTemplate>
+                            <DataTemplate>
+                                <!--Here u can put the Details if u want-->
+                                <Grid Margin="10,10,10,5">
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="*"/>
+                                        <ColumnDefinition Width="*"/>
+                                    </Grid.ColumnDefinitions>
+                                    <StackPanel HorizontalAlignment="Left" Grid.Column="0">
+                                        <TextBlock Text="Details: " FontWeight="Bold" FontSize="15"/>
                                         <StackPanel Orientation="Horizontal">
                                             <TextBlock Text="Color:" Width="50"/>
-                                            <TextBox Text="{Binding Color}" Width="150"/>
-                                        </StackPanel>
-                                        <StackPanel Orientation="Horizontal">
-                                            <TextBlock Text="Comment:" Width="50"/>
-                                            <TextBox Text="{Binding Comment}" Width="150"/>
+                                            <TextBlock Text="{Binding Color}" Width="100"/>
                                         </StackPanel>
                                         <StackPanel Orientation="Horizontal">
                                             <TextBlock Text="Year:" Width="50"/>
-                                            <TextBox Text="{Binding Year}" Width="150"/>
+                                            <TextBlock Text="{Binding Year}" Width="100" />
                                         </StackPanel>
                                         <StackPanel Orientation="Horizontal">
-                                            <TextBlock Text="Price:" Width="50"/>
-                                            <TextBox Text="{Binding Price}" Width="150"/>
+                                            <TextBlock Text="Price:" Width="80"/>
+                                            <TextBlock Text="{Binding Price}" Width="200"/>
+                                        </StackPanel>
+                                        <StackPanel Orientation="Horizontal">
+                                            <TextBlock Text="Comment:" Width="80"/>
+                                            <TextBlock Text="{Binding Comment}" Width="200"/>
                                         </StackPanel>
                                     </StackPanel>
-
-                                </StackPanel>
-
-                            </StackPanel>
-                        </DataTemplate>
-                    </ListView.ItemTemplate>
-                </ListView>
-
+                                    <StackPanel HorizontalAlignment="Right" Grid.Column="1">
+                                        <!--<Button Content="Sell"
+                                            HorizontalAlignment="Right"
+                                            VerticalAlignment="top"
+                                            Command="{Binding CreateInvoiceWithSelectedCar}"/>
+                                        <Button x:Name="Delete2" 
+                                            Content="Delete"
+                                            HorizontalAlignment="Right"
+                                            Margin="0,10,0,0"
+                                            VerticalAlignment="Top"
+                               
+                                            Command="{Binding ElementName=DataGrid, Path=DataContext.DeleteCar}">
+                                            <Button.DataContext>
+                                                <ViewModel:RegisterCarViewModel/>
+                                            </Button.DataContext>
+                                        </Button>-->
+                                    </StackPanel>
+                                </Grid>
+                            </DataTemplate>
+                        </controls:DataGrid.ItemDetailsTemplate>
+                    </controls:DataGrid>
+                </StackPanel>
+                <!--DataGrid-End-->
                 <HyperlinkButton Content="" HorizontalAlignment="Left" Margin="1056,257,0,0" VerticalAlignment="Top"/>
                 <StackPanel HorizontalAlignment="Left" Height="292" Margin="156,113,0,0" VerticalAlignment="Top" Width="187">
                     <TextBox Text="{Binding Name, Mode=TwoWay}" Width="150" Height="30" VerticalAlignment="Center" HorizontalAlignment="Left" PlaceholderText="Name"/>
@@ -135,12 +159,12 @@
                 </StackPanel>
                 <StackPanel HorizontalAlignment="Left" Height="112" Margin="936,247,0,0" VerticalAlignment="Top" Width="104">
 
-                    <Button x:Name="button" Content="DeleteCar" HorizontalAlignment="Left" Command="{Binding DeleteCar,Mode=TwoWay}" VerticalAlignment="Top" Background="#32BEA6"/>
-                    <Button x:Name="button2" Content="CreateInvoice" HorizontalAlignment="Stretch" Command="{Binding CreateInvoiceWithSelectedCar,Mode=TwoWay}" VerticalAlignment="Stretch" Background="#32BEA6"/>
+                    <Button x:Name="Delete" Content="DeleteCar" HorizontalAlignment="Left" Command="{Binding DeleteCar,Mode=TwoWay}" VerticalAlignment="Top" Background="#32BEA6"/>
+                    <Button x:Name="CreatInvoice" Content="CreateInvoice" HorizontalAlignment="Stretch" Command="{Binding CreateInvoiceWithSelectedCar,Mode=TwoWay}" VerticalAlignment="Stretch" Background="#32BEA6"/>
                 </StackPanel>
                 <StackPanel HorizontalAlignment="Right" Height="64" Margin="0,71,367,0" VerticalAlignment="Top" Width="437" Orientation="Horizontal">
                     <TextBox PlaceholderText="Find Car" Width="250" Height="30" VerticalAlignment="Top" HorizontalAlignment="Center" Text="{Binding searchforcar, Mode=TwoWay}"/>
-                    <Button x:Name="button1" Content="Search" HorizontalAlignment="Stretch" Command="{Binding searchCar}" VerticalAlignment="Top" Height="32" Width="100" Background="#32BEA6"/>
+                    <Button x:Name="Search" Content="Search" HorizontalAlignment="Stretch" Command="{Binding searchCar}" VerticalAlignment="Top" Height="32" Width="100" Background="#32BEA6"/>
                 </StackPanel>
             </Grid>
         </SplitView>
